--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
 
     <!-- OR an un-minified version is also available -->
     <script src="https://cdn.plot.ly/plotly-latest.js"></script>
+    <!--USA MAP-->
+    <script src="https://cdn.anychart.com/releases/8.0.1/geodata/countries/united_states_of_america/united_states_of_america.js"></script>
     
   </head>
   <body>
